# master-thesis

./: AGENT.md  README.md  pyproject.toml
app/: __init__.py  config.py  feature_engineering.py  main.py  market_resolver.py  mm_dashboard.py  models.py  paper_market_maker.py  polymarket_client.py  quote_service.py  reinforcement_learning.py  time_utils.py
data/: mm_state_20260420.csv  order_books_20260421.csv  order_books_20260421.jsonl  order_books_20260422_enriched_backup.csv  order_books_20260422_enriched_backup.jsonl  rl_mm_state_20260420.csv  rl_observations_20260420.csv  rl_q_table_latest.json  rl_replay_events_20260420.csv
master_thesis_polymarket_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_market_resolver.py  test_paper_market_maker.py  test_quote_normalization.py  test_reinforcement_learning.py  test_time_utils.py
