[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "master-thesis-polymarket-research"
version = "0.1.0"
description = "Minimal Polymarket BTC 5-minute order book collector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "typer>=0.12,<1.0",
]

[tool.setuptools]
packages = ["app"]
